css changes add connectors model

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ebe8b1; }
+  background: #13515c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5ba6be; }
+  background: #672610; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b12c74; }
+  background: #df199b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bb219a; }
+  background: #0d5e1b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d2e752; }
+  background: #2a307f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #82fb42; }
+  background: #b257bf; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #aeb909; }
+  background: #5cff7f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c458da; }
+  background: #48f097; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #84da7a; }
+  background: #5c7102; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8861cf; }
+  background: #ad95fe; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5ba4d6; }
+  background: #953d06; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #aa9176; }
+  background: #e5b2e6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f339c4; }
+  background: #059d6b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7324dc; }
+  background: #041518; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #afdaa3; }
+  background: #cffd07; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #11733c; }
+  background: #d0716b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f291c7; }
+  background: #dddf2d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #9892e3; }
+  background: #9e108a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3d5ca4; }
+  background: #df0259; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e9101c; }
+  background: #3c7075; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #06937d; }
+  background: #05b717; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0fc666; }
+  background: #bfcf0a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5069da; }
+  background: #7bfab1; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #120354; }
+  background: #45c6dd; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a36d1b; }
+  background: #45751d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b6086d; }
+  background: #a415e7; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9da490; }
+  background: #f85366; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #55770a; }
+  background: #96d859; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d735b0; }
+  background: #9d04fd; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #145235; }
+  background: #92cb2a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #71495d; }
+  background: #32e068; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8deb5a; }
+  background: #623ef8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f69080; }
+  background: #96038e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a1524c; }
+  background: #cbb87b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #5426f3; }
+  background: #137692; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0bb434; }
+  background: #ce730b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cdf49b; }
+  background: #e43fb2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #d1d2e1; }
+  background: #8b29c3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #96d953; }
+  background: #5cf766; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #df95b2; }
+  background: #4ca76f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8f72c9; }
+  background: #a262a8; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4704b3; }
+  background: #0dfffc; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0d0641; }
+  background: #61991a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c68890; }
+  background: #a36399; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0f679f; }
+  background: #5583b0; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3a1bd0; }
+  background: #5022f4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9e51f4; }
+  background: #e1ea96; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5d5124; }
+  background: #d8552d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #471b9f; }
+  background: #5a548e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b4c0fd; }
+  background: #956b06; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a93824; }
+  background: #0b557c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ffb3fb; }
+  background: #227a16; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0918a8; }
+  background: #045537; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #65cd06; }
+  background: #3ab05c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e7a8e8; }
+  background: #7d39ee; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e32e3b; }
+  background: #8f1781; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2416ec; }
+  background: #167e1d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #84283f; }
+  background: #6a727c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3ed12c; }
+  background: #822b51; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #73df63; }
+  background: #b085a3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #254b24; }
+  background: #85628f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f5e592; }
+  background: #c5fcdf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e009c6; }
+  background: #2cf1f2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e4f11e; }
+  background: #26dd82; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #80dfe7; }
+  background: #0ddc83; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8d9eff; }
+  background: #6e7477; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b78f4c; }
+  background: #dd9263; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c50495; }
+  background: #0132ce; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #62e3f5; }
+  background: #234769; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8f0ef5; }
+  background: #443ea3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0b64a0; }
+  background: #36aca0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #41f871; }
+  background: #5fcf27; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5d1e4f; }
+  background: #65811b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4e25ff; }
+  background: #b63b5f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #acab39; }
+  background: #1844e7; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a7fba1; }
+  background: #69268d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2afbd0; }
+  background: #7af815; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #12d5b8; }
+  background: #2bfdb4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a55ca6; }
+  background: #8e597e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #cd5203; }
+  background: #9a38c5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c7aee6; }
+  background: #0b0fbd; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1daf75; }
+  background: #fcf09f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #97600b; }
+  background: #c1d159; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e7f875; }
+  background: #b1f1f7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ec5018; }
+  background: #cfe6c4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #39bbc2; }
+  background: #4f0ee8; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #13e7f6; }
+  background: #c3be69; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #273910; }
+  background: #8d0361; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #86f8aa; }
+  background: #50e2bd; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #fef2b0; }
+  background: #877636; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #3a8d2e; }
+  background: #8b9758; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #970be7; }
+  background: #7a6c6c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #fb0b18; }
+  background: #c9b0e6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b22e2b; }
+  background: #f22df2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a71a0f; }
+  background: #981015; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #95bae3; }
+  background: #4332c4; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3048af; }
+  background: #51ec4c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6e7cfb; }
+  background: #838d8a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c3a671; }
+  background: #182d85; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ae58bb; }
+  background: #a6a427; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11184,6 +11184,26 @@ input:checked + .sliders:before {
 
 .modal-add-connections-wrapper {
   padding: 0px !important; }
+
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+  height: 55px !important;
+  width: 55px !important; }
+
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+  font-size: 20px !important; }
+
+.modal-add-connections-wrapper input[type="text"] {
+  padding: 9px 16px; }
+
+.modal-add-connections-wrapper .adapter-modal-bottom-row {
+  justify-content: right;
+  width: 100%; }
+
+.modal-add-connections-wrapper .adapter-modal-bottom-row div + div {
+  margin-right: 0px; }
+
+.modal-add-connections-wrapper .adapter-modal-content-box {
+  margin-bottom: 0px; }
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
   border-bottom: 1px solid #dcdde1;
