--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #13515c; }
+  background: #deb5fa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #672610; }
+  background: #0683ea; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #df199b; }
+  background: #4725cd; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0d5e1b; }
+  background: #8f6503; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2a307f; }
+  background: #9b827f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b257bf; }
+  background: #0333ce; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5cff7f; }
+  background: #7ec2f2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #48f097; }
+  background: #111348; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5c7102; }
+  background: #7dd6df; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ad95fe; }
+  background: #482f5a; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #953d06; }
+  background: #d5195c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e5b2e6; }
+  background: #dcddda; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #059d6b; }
+  background: #e0c063; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #041518; }
+  background: #0d0932; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #cffd07; }
+  background: #79513c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d0716b; }
+  background: #7fe35d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #dddf2d; }
+  background: #93e3fe; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #9e108a; }
+  background: #447eb2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #df0259; }
+  background: #f73031; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3c7075; }
+  background: #827710; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #05b717; }
+  background: #eed7f5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bfcf0a; }
+  background: #c1ec27; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7bfab1; }
+  background: #f1ce7e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #45c6dd; }
+  background: #536ef8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #45751d; }
+  background: #46fc3f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a415e7; }
+  background: #99c71e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f85366; }
+  background: #a3c35b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #96d859; }
+  background: #cbf66b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9d04fd; }
+  background: #c4a24b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #92cb2a; }
+  background: #407de5; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #32e068; }
+  background: #6492d3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #623ef8; }
+  background: #13e549; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #96038e; }
+  background: #3d56b1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #cbb87b; }
+  background: #f07524; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #137692; }
+  background: #6e4bf2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ce730b; }
+  background: #a323d1; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e43fb2; }
+  background: #fdf602; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8b29c3; }
+  background: #91c4b4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5cf766; }
+  background: #ce7628; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4ca76f; }
+  background: #f0dd77; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a262a8; }
+  background: #eac056; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0dfffc; }
+  background: #4f17b8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #61991a; }
+  background: #9e05ab; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a36399; }
+  background: #737c08; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5583b0; }
+  background: #1c7928; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5022f4; }
+  background: #ea60d3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e1ea96; }
+  background: #e7dfd9; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d8552d; }
+  background: #4c8db8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5a548e; }
+  background: #afc254; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #956b06; }
+  background: #3a95ba; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0b557c; }
+  background: #adddd9; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #227a16; }
+  background: #e7aed0; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #045537; }
+  background: #150981; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3ab05c; }
+  background: #3222b8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7d39ee; }
+  background: #808510; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8f1781; }
+  background: #89bae9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #167e1d; }
+  background: #d8d235; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6a727c; }
+  background: #e31fcc; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #822b51; }
+  background: #aedde1; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b085a3; }
+  background: #65a96b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #85628f; }
+  background: #539835; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c5fcdf; }
+  background: #0242a6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2cf1f2; }
+  background: #0876fe; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #26dd82; }
+  background: #25e95b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0ddc83; }
+  background: #a11232; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #6e7477; }
+  background: #6cff59; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #dd9263; }
+  background: #e0fe59; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0132ce; }
+  background: #5e3435; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #234769; }
+  background: #814ac6; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #443ea3; }
+  background: #7bab13; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #36aca0; }
+  background: #b0396e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5fcf27; }
+  background: #421038; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #65811b; }
+  background: #37b284; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b63b5f; }
+  background: #98b149; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1844e7; }
+  background: #74e792; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #69268d; }
+  background: #b19a38; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7af815; }
+  background: #126548; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2bfdb4; }
+  background: #38598c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #8e597e; }
+  background: #6de4d4; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9a38c5; }
+  background: #bf01e6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0b0fbd; }
+  background: #673ab4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fcf09f; }
+  background: #5afffe; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c1d159; }
+  background: #044af1; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b1f1f7; }
+  background: #5e94af; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #cfe6c4; }
+  background: #43434a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #4f0ee8; }
+  background: #e6c055; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c3be69; }
+  background: #3e5986; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8d0361; }
+  background: #7ed103; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #50e2bd; }
+  background: #93644f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #877636; }
+  background: #79e9f4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8b9758; }
+  background: #0a1028; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7a6c6c; }
+  background: #333082; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c9b0e6; }
+  background: #d23729; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f22df2; }
+  background: #3cb675; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #981015; }
+  background: #9f3069; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4332c4; }
+  background: #ffa417; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #51ec4c; }
+  background: #56ae27; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #838d8a; }
+  background: #98c9ed; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #182d85; }
+  background: #f4d47f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a6a427; }
+  background: #3ff528; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11351,7 +11351,7 @@ input:checked + .sliders:before {
     width: 100%; }
 
   .tags {
-    flex-direction: column; }
+    flex-wrap: wrap; }
 
   .tags a {
     text-align: center; } }
