css changes model page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #deb5fa; }
+  background: #022113; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #0683ea; }
+  background: #5e8c9c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4725cd; }
+  background: #f0abde; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8f6503; }
+  background: #1493a2; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9b827f; }
+  background: #a35a82; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0333ce; }
+  background: #e89bfa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7ec2f2; }
+  background: #bb6d3a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #111348; }
+  background: #9ef8d7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7dd6df; }
+  background: #f796cd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #482f5a; }
+  background: #b87926; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d5195c; }
+  background: #05c765; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #dcddda; }
+  background: #16f613; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e0c063; }
+  background: #513df0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0d0932; }
+  background: #065ba2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #79513c; }
+  background: #514e3e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7fe35d; }
+  background: #106231; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #93e3fe; }
+  background: #da5009; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #447eb2; }
+  background: #e28801; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f73031; }
+  background: #0511c3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #827710; }
+  background: #666755; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #eed7f5; }
+  background: #b433e0; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c1ec27; }
+  background: #9ec4ad; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f1ce7e; }
+  background: #4db567; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #536ef8; }
+  background: #285e10; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #46fc3f; }
+  background: #a4546b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #99c71e; }
+  background: #5a5b7f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a3c35b; }
+  background: #e1f50f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #cbf66b; }
+  background: #27c9b7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c4a24b; }
+  background: #873951; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #407de5; }
+  background: #b58a92; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6492d3; }
+  background: #2b5194; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #13e549; }
+  background: #ce8812; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3d56b1; }
+  background: #a41ee0; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f07524; }
+  background: #a98d43; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6e4bf2; }
+  background: #a51f75; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #a323d1; }
+  background: #f63bd0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #fdf602; }
+  background: #556c1a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #91c4b4; }
+  background: #de1390; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ce7628; }
+  background: #7f34c3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f0dd77; }
+  background: #e4d4df; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #eac056; }
+  background: #6b644b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4f17b8; }
+  background: #dca5ce; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9e05ab; }
+  background: #94d59b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #737c08; }
+  background: #9de330; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1c7928; }
+  background: #9e66c0; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ea60d3; }
+  background: #ae74a1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e7dfd9; }
+  background: #abfe21; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4c8db8; }
+  background: #f34bfd; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #afc254; }
+  background: #ed6250; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3a95ba; }
+  background: #ddaebc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #adddd9; }
+  background: #4dcd95; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #e7aed0; }
+  background: #7b97e1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #150981; }
+  background: #49839a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3222b8; }
+  background: #90189d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #808510; }
+  background: #babc07; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #89bae9; }
+  background: #86252d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d8d235; }
+  background: #a5cf05; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e31fcc; }
+  background: #ded76f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #aedde1; }
+  background: #34cb81; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #65a96b; }
+  background: #bca318; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #539835; }
+  background: #f36de2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0242a6; }
+  background: #2384c8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #0876fe; }
+  background: #795374; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #25e95b; }
+  background: #d19373; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #a11232; }
+  background: #fdf23d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #6cff59; }
+  background: #9b13b2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e0fe59; }
+  background: #c6bb31; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5e3435; }
+  background: #b66d8e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #814ac6; }
+  background: #1a489a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7bab13; }
+  background: #916d86; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b0396e; }
+  background: #b67733; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #421038; }
+  background: #726635; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #37b284; }
+  background: #ea05b4; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #98b149; }
+  background: #773393; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #74e792; }
+  background: #e90b06; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b19a38; }
+  background: #cb46ca; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #126548; }
+  background: #89d4f5; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #38598c; }
+  background: #6deebb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6de4d4; }
+  background: #46bd6b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #bf01e6; }
+  background: #5235e3; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #673ab4; }
+  background: #aa4209; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5afffe; }
+  background: #95fb1a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #044af1; }
+  background: #866c8c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5e94af; }
+  background: #07ad49; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #43434a; }
+  background: #e1b1c8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e6c055; }
+  background: #95f6f3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3e5986; }
+  background: #284c51; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7ed103; }
+  background: #31990f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #93644f; }
+  background: #b44c7a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #79e9f4; }
+  background: #8db734; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0a1028; }
+  background: #8983d4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #333082; }
+  background: #a6877d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d23729; }
+  background: #8e5591; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3cb675; }
+  background: #319133; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9f3069; }
+  background: #ea3a08; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ffa417; }
+  background: #500ea1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #56ae27; }
+  background: #672aae; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #98c9ed; }
+  background: #a78c16; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f4d47f; }
+  background: #d602d2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #3ff528; }
+  background: #5a57a6; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9026,7 +9026,7 @@ th {
 .tags {
   display: flex; }
   .tags a {
-    background: rgba(176, 176, 176, 0.5);
+    background: #f4f4f4;
     color: black;
     padding: 8px 20px;
     border-radius: 20px;
@@ -9037,7 +9037,7 @@ th {
     .tags a:last-child {
       margin-right: 0px; }
     .tags a:hover {
-      color: white; }
+      color: black; }
 
 .modal-text-row {
   color: #666666; }
@@ -11334,7 +11334,8 @@ input:checked + .sliders:before {
   .field-large {
     width: 100% !important; }
 
-  .adapter-modal-bottom-row {
+  .adapter-modal-bottom-row,
+  .modal-add-connections-wrapper .adapter-modal-bottom-row {
     justify-content: inherit; }
 
   .no-file-chisen-items {
@@ -11354,7 +11355,10 @@ input:checked + .sliders:before {
     flex-wrap: wrap; }
 
   .tags a {
-    text-align: center; } }
+    text-align: center; }
+
+  .modal-add-connections-wrapper .theme-btn {
+    width: 100% !important; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .query-wizard-div-box {
